# pyrite

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  test.yml
arm/: Cargo.toml
arm/src/: alu.rs  arm.rs  cpu.rs  exception.rs  lib.rs  lookup.rs  memory.rs  registers.rs  thumb.rs  transfer.rs
arm/src/alu/: binary_operations.rs  multiply.rs  psr.rs  shited_operands.rs  thumb_operands.rs
arm/tests/: arm_test.proptest-regressions  arm_test.rs  thumb_test.rs
arm/tests/common/: asm.rs  mod.rs  operands.rs  proptest_util.rs  test_combinations.rs
crates/arm/: Cargo.toml
crates/arm-devkit/: Cargo.toml
crates/arm-devkit/src/: lib.rs
crates/arm-disassembler/: Cargo.toml
crates/arm-disassembler/src/: arm.rs  common.rs  lib.rs  lookup.rs  thumb.rs
crates/arm-emulator/: Cargo.toml
crates/arm-emulator/src/: arm.rs  clock.rs  cpu.rs  lib.rs  lookup.rs  memory.rs  thumb.rs  transfer.rs
crates/arm-emulator/tests/: arm_test.rs  thumb_test.rs
crates/arm-emulator/tests/common/: asm.rs  mod.rs  operands.rs
crates/arm-emulator/tests/data/: simple.ld
crates/arm/src/: alu.rs  arm.rs  exception.rs  lib.rs
crates/arm/src/alu/: binary_operations.rs
crates/arm/tests/: arm_test.rs
crates/arm/tests/common/: asm.rs
crates/gba/: Cargo.toml
crates/gba/src/: events.rs  hardware.rs  lib.rs  memory.rs  video.rs
crates/gba/src/hardware/: keypad.rs  palette.rs  system_control.rs  video.rs
crates/gba/src/hardware/video/: line.rs  mode3.rs  mode4.rs  registers.rs
crates/gba/src/memory/: io_registers.rs
crates/gba/tests/: memory.rs  video.rs
crates/gba/tests/common/: mod.rs
crates/gba/tests/data/: simple.ld
crates/pyrite/: Cargo.toml
crates/pyrite-derive/: Cargo.toml
crates/pyrite-derive/src/: ioreg_derive.rs  lib.rs
crates/pyrite-profiling/: Cargo.toml
crates/pyrite-profiling/src/: lib.rs  tracy.rs
crates/pyrite/src/: cli.rs  config.rs  debugger.rs  gba_runner.rs  logging.rs  main.rs  renderer.rs  ui.rs  worker.rs
crates/pyrite/src/renderer/: common.rs  glow_renderer.rs  wgpu_renderer.rs
crates/pyrite/src/ui/: app_window.rs  disassembly.rs  gba_cpu_panel.rs  gba_disassembler.rs  gba_image.rs  profiler.rs
crates/pyrite/src/ui/gba_image/: glow.rs  wgpu.rs
crates/util/: Cargo.toml
crates/util/src/: bits.rs  display.rs  lib.rs  wyhash.rs
gba-programs/custom-bios/: Makefile
gba-programs/custom-bios/include/: common.h
gba-programs/custom-bios/source/: bios.c  bios.s  common.c  reset.s
gba-programs/mode3-test/source/: mode3.c
roms/custom/: mode3-test.gba
scripts/: generate-lookup-tables.py
scripts/data/: arm-instruction-table.json  lut-header.rs  thumb-instruction-table.json
util/src/: bits.rs
