[package]
name = "gba"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { path = "../arm" }
util = { path = "../util" }
pyrite-derive = { path = "../pyrite-derive" }
byteorder = "1.4.3"
tracing = { version = "0.1" }
arrayvec = "0.7.4"
pyrite-profiling = { path = "../pyrite-profiling", default-features = false, optional = true }

[dev-dependencies]
arm-devkit = { path = "../arm-devkit" }
