[package]
name = "gba"
version = "0.1.0"
edition = "2021"

[features]
"default" = ["arm-disassembler"]
"arm-disassembler" = ["arm/arm-disassembler"]

[dependencies]
arm = { path = "../arm", features = ["arm-emulator"] }
util = { path = "../util" }
pyrite-derive = { path = "../pyrite-derive" }
byteorder = "1.4.3"
tracing = { version = "0.1" }
arrayvec = "0.7.4"
puffin = { version = "0.16.0", default-features = false, optional = true }

[dev-dependencies]
arm-devkit = { path = "../arm-devkit" }
