[package]
name = "pyrite-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
bitflags = "2.4.0"
either = "1.9.0"
proc-macro2 = "1"
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [
    "parsing",
    "printing",
    "derive",
] }
util = { path = "../util" }
