[package]
name = "pyrite"
version = "0.1.0"
edition = "2021"

[features]
default = ["glow", "wgpu", "profiling"]
wgpu = ["eframe/wgpu"]
glow = ["eframe/glow"]
profiling = ["puffin", "gba/puffin", "puffin_egui"]

[dependencies]
anyhow = "1"
dirs = { version = "5", default-features = false }
eframe = { version = "0.24", default-features = false, features = ["accesskit", "default_fonts", "persistence"] }
egui = { version = "0.24", default-features = false, features = ["default_fonts"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gba = { path = "../gba", features = ["arm-disassembler"]  }
arm = { path = "../arm", features = ["arm-disassembler"] }
parking_lot = "0.12"
bytemuck = { version = "1.13", features = ["derive"] }
clap = { version = "4.4", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
spin_sleep = { version = "1.1.1", default-features = false }
puffin = { version = "0.18", default-features = false, optional = true }
puffin_egui = { version = "0.24", default-features = false, optional = true, features = ["serde"] }
ahash = "0.8.6"
egui_extras = { version = "0.24.2", default-features = false }
